# FastFileSearch

./: CMakeLists.txt  FastFileSearch.rc  FatReader.cpp  FatReader.h  FatStructs.h  Localization.cpp  MFTReader.cpp  MFTReader.h  NtfsStructs.h  RCa14536  RCa25124  RCa26136  README.md  app.manifest  build.bat  build_local.bat  create_icon_robust.ps1  exFatReader.cpp  exFatReader.h  main.cpp  resource.h  temp_draw.cpp  test_console.cpp
.agent/workflows/: build_cmake.md  build_installer.md
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake
build_nmake/: CMakeCache.txt
doc/: MFT_INTERNALS.md  README.md
installer/: setup.iss
src/: FastFileSearch.rc  FatReader.cpp  Localization.h  exFatReader.cpp  exFatStructs.h  main.cpp  resource.h  temp_logic.cpp  test_console.cpp
